# onlynoise

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  Dockerfile.realtime  README.md  Taskfile.yaml  index.py  mongod.conf  mongodb.py  noti2.py  pyproject.toml  realtime.py  sendmessage.py  services.py  services.toml
client/: cli.py  onlyclient.py  testclient.py
data/docker-entrypoint-initdb.d/: createCollections.js
docker/: Dockerfile  Dockerfile.push
routers/: __init__.py  account.py  health.py  meta.py  postbox.py  realtime.py  subscription.py
tools/: mongod.conf
