[tool.poetry]
name = "onlynoise"
version = "0.1.0"
description = ""
authors = ["Grigory Bakunov <thebobuk@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
pymongo = "*"
motor = "*"
uvicorn = "*"
httpx = "*"
websockets = "*"
aioapns = "*"
cffi = "*"
pyapns-client = "*"
sse-starlette = "*"
tomli = "^2.0.1"
bpython = "^0.22.1"
rich = "^12.0.1"
sseclient = "^0.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
